# gs_texture_viewer

./: .clangd  .editorconfig  .gitignore  .gitmodules  CMakeLists.txt
script/: build.bat  build.sh  clean.bat  configure.bat  configure.sh
shaders/: basic.frag  lighting.frag  lighting.geom  lighting.vert  selecting.frag  shader.frag  shader.tesc  shader.tese  shader.vert  wire.frag  wire.geom
shaders/gs/: alpha_points.vert  copy.vert
src/: CMakeLists.txt  main.cpp  main_window.cpp  main_window.hpp
src/gaussian/: CMakeLists.txt
src/gaussian/model/: geodesic_gs_model.cpp  geodesic_gs_model.hpp  gs_gl_data.hpp  gs_model.cpp  gs_model.hpp  ply.hpp  texture_gs_model.cpp  texture_gs_model.hpp  utils.hpp
src/gaussian/rasterizer/: CMakeLists.txt  config.hpp  forward.hpp  texture_rasterizer.cu  texture_rasterizer.hpp
src/gaussian/rasterizer/rasterizer/: auxiliary.h  defines.hpp  forward.cu  forward.cuh  forward.hpp  geodesics.cu  geodesics.hpp  rasterizer.cu  rasterizer.hpp  texture_rasterizer.cu  texture_rasterizer.hpp
src/gaussian/rasterizer/rasterizer/gsm/: base.cuh  gsm.cuh  ivector.cuh  matrix.cuh  vector.cuh  vector_operator.cuh
src/gaussian/rasterizer/rasterizer/vector/: matrix.hpp  vector.hpp
src/gaussian/renderer/: ellipsoid_renderer.cpp  ellipsoid_renderer.hpp  gaussian_renderer.cpp  gaussian_renderer.hpp  point_renderer.cpp
src/gaussian/renderer/shader/: ellipsoid.vert
src/gaussian/view/: gs_view.cpp  gs_view.hpp  texture_gs_view.cpp  texture_gs_view.hpp
src/gaussian/view/renderer/: ellipsoid_renderer.cpp  ellipsoid_renderer.hpp  gaussian_renderer.cpp  gaussian_renderer.hpp  point_renderer.cpp  point_renderer.hpp
src/gaussian/view/renderer/shader/: alpha_points.frag  copy.frag  ellipsoid.frag
src/panel/: gaussian_panel.cpp  gaussian_panel.hpp  model_panel.cpp  model_panel.hpp  panel.cpp  panel.hpp  texture_gs_panel.cpp  texture_gs_panel.hpp
src/panel/page_panel/: gaussian_panel.cpp  gaussian_panel.hpp  geodesic_gs_panel.cpp  geodesic_gs_panel.hpp  model_panel.cpp  model_panel.hpp  page_panel.hpp  texture_gs_panel.cpp  texture_gs_panel.hpp
src/shaders/: basic.vert  shader.frag  shader.geom  shader.vert  wire.vert
src/utils/: cache.hpp  logger.hpp  utils.cpp  utils.hpp
src/utils/camera/: camera.cpp  camera.hpp  imguizmo_camera.cpp  imguizmo_camera.hpp  trackball_camera.cpp  trackball_camera.hpp  trackball_camera_three.cpp  trackball_camera_three.hpp
src/utils/gl/: frameBufferHelper.hpp  program.hpp  screen_quad.hpp
src/utils/imgui/: gizmo_arrow.cpp  gizmo_arrow.hpp  icon.cpp  icon.hpp  image_selectable.cpp  image_selectable.hpp  opengl.cpp  opengl.hpp  sidebar.cpp  sidebar.hpp  tool_line.cpp  tool_line.hpp  utils.hpp  wrapper.hpp
src/utils/mesh/: expmap.cpp  expmap.hpp  expmap_helper.hpp  geodesic_splines.cpp  geodesic_splines.hpp  harmonics.cpp  harmonics.hpp  hit_test.cpp  hit_test.hpp  isosurface.cpp  isosurface.hpp  mesh.hpp  model.cpp  model.hpp  solve_uv.cpp  solve_uv.hpp
src/utils/texture/: texture.cpp  texture.hpp  texture_editor.cpp  texture_editor.hpp
